# 1D-PIC-EA-23

./: .gitignore  Benchmark.ipynb  check_diagnostics.py  cluster_min_size_scan.py  default.cfg  dpmsa_benchmarking.py  graph.ipynb  main.py  multirestart.py  paramview.py  prepare.py  pyproject.toml  start_sim.sh  turner.cfg  viewResults copy.ipynb  viewResults.ipynb
base/: I 1+  I 1-  I2 1+  e-
benchmark/: Turner_ionization.csv  Turner_power.csv  eepf1.csv  eepf2.csv  eepf3.csv  eepf4.csv
benchmark_results/: benchmark_data.npz  error_summary.txt
configurations/: I12_15mTorr.txt  I2_15mTorr.txt  I32_15mTorr.txt  PEGASES_Ar.cfg  Xenon_50w3_5mTorr_losses.cfg  Xenon_losses_fast.cfg  boot_up.cfg  electron_turner1.txt  induction_xe.cfg  ions_turner1.txt  plasma_bootup.cfg  profile_I_alpha128_13W.cfg  profile_I_alpha128_HP.cfg  profile_I_alpha32.cfg  profile_xe.txt  t1_He.txt  test_I.cfg  test_I_alpha16.cfg  test_Xe.cfg  test_Xe_alpha16.cfg  test_Xe_alpha32.cfg  trevor.cfg  turner1.cfg  turner1_profile.cfg  turner2.cfg  turner3.cfg  turner4.cfg  turner_bootup.cfg  turner_bootup2.cfg  xe_pegases.cfg
cross_sections/: Ar 1+_Ar.txt  He 1+_He.txt  I 1+_I 1-.txt  I 1+_I2.txt  I 1+_I_12.txt  I 1-_I.txt  I 1-_I2.txt  I2 1+_I 1-.txt  I2 1+_I2.txt  I2 1+_I_32.txt  Kr 1+_Kr.txt  Xe 1+_Xe.txt  e-_Ar.txt  e-_He.txt  e-_I 1-.txt  e-_I2.txt  e-_I_12.txt  e-_I_32.txt  e-_Kr.txt  e-_Xe.txt
pic/: Hdf5Viewer.py  MCC.py  MergingSplitting.py  benchmark.py  collisions.py  diagnostics.py  functions.py  parsing.py  particles.py  plasma.py  poisson_solver.py  reactions.py  walls.py
(+8 files in other folders)
